--- a/styles/main.css
+++ b/styles/main.css
@@ -292,8 +292,9 @@ aside {
     text-align: center;
 }
 
-aside p img {
-    width: 5rem;
+aside img {
+    width: 150px;
+    height: auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.089);
     border-radius: 50%;
 }
