--- a/styles/main.css
+++ b/styles/main.css
@@ -292,7 +292,7 @@ aside {
     text-align: center;
 }
 
-aside img {
+aside a img {
     width: 150px;
     height: auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.089);
