--- a/styles/main.css
+++ b/styles/main.css
@@ -295,6 +295,7 @@ aside {
 aside a img {
     width: 150px;
     height: auto;
+    margin: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.089);
     border-radius: 50%;
 }
